@@ -189,6 +189,7 @@ SpaceX-no-space-sci=Remove space science from SpaceX technologies
 SpaceX-no-nuclear=Replace nuclear with rocket fuel
 SpaceX-cheaper-fusion-reactor=SpaceX cheaper fusion reactor
 SpaceX-no-bob=No Bob's mods compatibility
+SpaceX-no-krastorio=No Krastorio2 mods compatibility
 SpaceX-no-pyanodons=No Pyanodons mods compatibility
 SpaceX-no-popup=Suppress Narrative Popups after first completion
 SpaceX-auto-continue=Auto-continue on after first completion
@@ -206,6 +207,7 @@ SpaceX-no-space-sci=By default the later SpaceX technologies requires Space Scie
 SpaceX-no-nuclear=Replaces all nuclear fuel with rocket fuel in all SpaceX recipes. Also replaces the nuclear reactor with rocket fuel (makes game easier).
 SpaceX-cheaper-fusion-reactor=The recipe cost of the fusion reactor component is reduced to 40 portable fusion reactors.  This makes them cost 10k processing units (same as in v0.14) rather than 25k processing units that is the standard v0.15 cost (makes game easier).
 SpaceX-no-bob=Bob's mods compatibility will not be used in this playthrough if Bob mods are used.
+SpaceX-no-krastorio=Krastorio2 mods compatibility will not be used in this playthrough if Krastorio2 mods are used.
 SpaceX-no-pyanodons=Pyanodons mods compatibility will not be used in this playthrough if Pyanodons mods are used.
 SpaceX-no-popup=If selected then the narrative popups for the stage completion will be suppressed. (Good for games where you want to launch many FTL craft)
 SpaceX-auto-continue=This option will automatically continue and reset the SpaceX progress when the FTL space craft has been completed.  Also the popup is suppressed - use in conjucntion with the above selection to remove the popups so you can keep launching multiple FTL spacecraft without manual intervention.
