@@ -3,7 +3,8 @@ Version: 1.2.1
 Date: .2023
   Features:
     - Added all 5 basic science packs to SpaceX techs
-    - Added pyanodons integration
+    - Added Krastorio2 integration
+    - Added Pyanodons integration
   Changes:
     - Adapted bob technology FTL D research cost to new curve
 ---------------------------------------------------------------------------------------------------
